--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <title>Simon</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
-  <link href="images/game.png" rel="icon">
+  <link href="game.png" rel="icon">
 </head>
 
 <body>
   <h1 id="level-title">Press Any Key to Start</h1>
   
-  <img id="keyboardGIF" src="images/keyboardgif.gif" alt="KeyboardGIF">
-  <img class= "hidden" id="gameOverGIF" src="images/gameover.gif" alt="GameOver">
+  <img id="keyboardGIF" src="keyboardgif.gif" alt="KeyboardGIF">
+  <img class= "hidden" id="gameOverGIF" src="gameover.gif" alt="GameOver">
 
   <div class="container">
     
